# local_Squidiff

./: .gitignore  AGENTS.md  CLAUDE.md  LabFlowLauncher.spec  README.md  labflow_launcher.py  pyproject.toml
.black-cache/26.1.0/: Grammar3.13.5.final.0.pickle  cache.8,9,10,11,12,13,14.88.1.0.0.0.1.0.0.@.pickle
.debug/: labflow-mvp-debug.md  readme-ruff-debug.md  ui-labflow-debug.md  ui-labflow-debug.md.bak.auto-fix
backend/app/: main.py  runtime.py
backend/app/api/: auth.py  datasets.py  jobs.py  results.py  runtime.py  seurat.py  user_prefs.py
backend/app/services/: auth_service.py  dataset_preprocessor.py  job_queue.py  seurat_converter.py  seurat_inspector.py  squidiff_runner.py  visualize.py
backend/app/storage/: state_manager.py
backend/scripts/: seurat_to_h5ad.R
backend/tests/: test_dataset_preprocessor.py  test_jobs_api.py  test_seurat_api.py  test_user_prefs_api.py
docs/: LabFlow前端用户操作说明.md  PRD_Seurat交互筛选与500x500训练管线.md  PRD_实验室内网单细胞训练预测平台.md  UAT_Seurat_V2_检查清单.md  Windows一键启动器.md  seurat转换指南.md  实验室10分钟上手.md  模型能做什么与前端设计理念.md  避坑指南.md  部署文档.md  部署文档.md.__bak__
docs/api/: auth.md  datasets.md  jobs.md  runtime.md  seurat.md  user_prefs.md
frontend/: package.json
frontend/src/: App.tsx
frontend/src/services/: api.ts
frontend/src/styles/: tokens.css
scripts/: run_500x500_test_windows.py  run_full_train_predict_viz_windows.py  uat_phase4_seurat_v2.py
