[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Squidiff"
version = "1.0.8"
dependencies = [
    # 深度学习
    "torch>=2.0.0",
    # 单细胞数据分析
    "scanpy>=1.10.0",  # 支持 Python 3.11+ (1.9.x 依赖的 numba 0.53.1 仅支持 Python <3.10)
    "anndata>=0.8.0",
    "h5py>=3.8.0",
    # 科学计算
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    # 可视化
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # 进度条
    "tqdm>=4.65.0",
    # 日志
    "tensorboard>=2.13.0",
]
requires-python = ">=3.9"
description = "Diffusion model-based generative framework designed to predict transcriptomic changes across diverse cell types in response to a wide range of environmental changes."
readme = "README.md"
license = {file="LICENSE"}
authors = [{name = "Siyu He", email = "siyuhe@stanford.edu"}]

[project.optional-dependencies]
# 药物结构支持
drug = [
    "rdkit>=2023.3.1",
]
# GUI 支持
gui = ["PyQt5"]
# CLI 工具
cli = [
    "rich",
    "click",
]
# 开发工具
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
# 完整安装（包含所有可选依赖）
all = [
    "Squidiff[drug,gui,cli,dev]",
]

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"
